# truco-y-mate

./: .gitignore  CMakeLists.txt  README.md
res/: bastos  male  (+10 more)
tcurses/: CMakeLists.txt
tcurses/include/tcurses/: align.h  application.h  art.h  border.h  box.h  colors.h  component.h  emergent.h  frame.h  input_event.h  label.h  layout.h  menu.h  menuitem.h  screen.h  tcurses.h  utilities.h  wrap.h
tcurses/src/: application.cpp  art.cpp  border.cpp  component.cpp  emergent.cpp  frame.cpp  label.cpp  menu.cpp  menuitem.cpp  screen.cpp  utilities.cpp
testing_tcurses/: CMakeLists.txt
testing_tcurses/include/: test_tcurses.h
testing_tcurses/src/: test_tcurses.cpp
truco/: CMakeLists.txt
truco/include/: big_card_component.h  card_component.h  deck.h  game_frame.h  game_menu.h  mainframe.h  player.h  start_frame.h  truco.h  truco_colors.h  turn_manager.h  utils.h
truco/include/components/: big_card_component.h  game_frame.h  player_frame.h  score_frame.h  start_frame.h
truco/include/dialogs/: end_round_dialog.h
truco/include/entities/: behavior.h  deck.h  player.h  step_manager.h
truco/include/utils/: random.h
truco/src/: big_card_component.cpp  card_component.cpp  deck.cpp  game_frame.cpp  game_menu.cpp  mainframe.cpp  player.cpp  player_frame.cpp  random.cpp  start_frame.cpp  truco.cpp  turn_manager.cpp  utils.cpp
truco/src/components/: big_card_component.cpp  card_component.cpp  game_frame.cpp  player_frame.cpp  score_frame.cpp  start_frame.cpp
truco/src/dialogs/: end_round_dialog.cpp
truco/src/entities/: behavior.cpp  deck.cpp  player.cpp  step_manager.cpp
truco/src/utils/: random.cpp  utils.cpp
